samples/_failures_safe/1761550485_6378a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4712c1fd.c: In function ‘main’:
./samples/SAFE/__tmp_4712c1fd.c:152:9: error: expected declaration or statement at end of input
  152 |         run_algorithm(bfs_traversal, &g, start);
      |         ^~~~~~~~~~~~~
./samples/SAFE/__tmp_4712c1fd.c:152:9: error: expected declaration or statement at end of input
